[package]
name = "example"
version = "0.1.0"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>"]

[dependencies.cdrs]
# TODO: use crates.io registry when corresponded version is published
git = "https://github.com/AlexPikalov/cdrs"
branch = "into-cdrs-bytes-trait"

[dependencies.into_cdrs_bytes_derive]
path = ".."
